refactor: migrate editor from Tiptap to CodeMirror, implement atomic file writes, and add logging configuration