@@ -5,11 +5,12 @@ import org.synapse.domain.model.Note;
 import org.synapse.domain.model.NoteId;
 import org.synapse.domain.repository.NoteRepository;
 
+import org.jboss.logging.Logger;
+import org.jboss.logging.MDC;
 import jakarta.enterprise.context.ApplicationScoped;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -18,60 +19,101 @@ import java.util.stream.Stream;
 @ApplicationScoped
 public class LocalFileNoteRepository implements NoteRepository {
 
-    private final Path vaultPath;
+    private static final Logger LOG = Logger.getLogger(LocalFileNoteRepository.class);
+    private static final String MD_EXTENSION = ".md";
+    private static final String MDC_NOTE_ID = "noteId";
 
-    public LocalFileNoteRepository(@ConfigProperty(name = "synapse.vault.path", defaultValue = "${user.home}/.synapse/vault") String vaultPathStr) {
+    private final Path vaultPath;
+    private final AtomicFileStore fileStore;
+
+    public LocalFileNoteRepository(
+            @ConfigProperty(name = "synapse.vault.path", defaultValue = "${user.home}/.synapse/vault") String vaultPathStr,
+            AtomicFileStore fileStore) {
         this.vaultPath = Path.of(vaultPathStr);
+        this.fileStore = fileStore;
+        initializeVault();
+    }
+
+    private void initializeVault() {
         try {
             Files.createDirectories(this.vaultPath);
+            LOG.info("Initialize Vault SUCCESS");
         } catch (IOException e) {
+            LOG.error("Initialize Vault ERROR: " + this.vaultPath, e);
             throw new RuntimeException("Could not initialize vault directory: " + this.vaultPath, e);
         }
     }
 
     @Override
     public List<Note> findAll() {
-        try (Stream<Path> paths = Files.walk(vaultPath)) {
-            return paths.filter(Files::isRegularFile)
-                        .filter(p -> p.toString().endsWith(".md"))
-                        .map(this::readNoteFromFile)
-                        .filter(Optional::isPresent)
-                        .map(Optional::get)
-                        .collect(Collectors.toList());
+        LOG.debug("List Notes START");
+        try {
+            if (!Files.exists(vaultPath)) return List.of();
+            try (Stream<Path> paths = Files.walk(vaultPath, 10)) {
+                List<Note> notes = paths.filter(Files::isRegularFile)
+                            .filter(p -> p.toString().endsWith(MD_EXTENSION))
+                            .map(this::readNoteFromFile)
+                            .filter(Optional::isPresent)
+                            .map(Optional::get)
+                            .collect(Collectors.toList());
+                LOG.infof("List Notes SUCCESS count=%d", notes.size());
+                return notes;
+            }
         } catch (IOException e) {
-            return Collections.emptyList();
+            LOG.error("List Notes ERROR", e);
+            return List.of();
         }
     }
 
     @Override
     public Optional<Note> findById(NoteId id) {
-        Path filePath = vaultPath.resolve(id.value() + ".md");
-        if (!Files.exists(filePath)) {
-            return Optional.empty();
+        MDC.put(MDC_NOTE_ID, id.value());
+        try {
+            Path filePath = getFilePath(id);
+            if (!Files.exists(filePath)) {
+                LOG.debug("Find Note MISS");
+                return Optional.empty();
+            }
+            Optional<Note> note = readNoteFromFile(filePath);
+            LOG.debug("Find Note SUCCESS");
+            return note;
+        } finally {
+            MDC.remove(MDC_NOTE_ID);
         }
-        return readNoteFromFile(filePath);
     }
 
     @Override
     public void save(Note note) {
-        Path filePath = vaultPath.resolve(note.getId().value() + ".md");
+        MDC.put(MDC_NOTE_ID, note.getId().value());
         try {
-            if (filePath.getParent() != null) {
-                Files.createDirectories(filePath.getParent());
-            }
-            Files.writeString(filePath, note.getContent());
+            long start = System.currentTimeMillis();
+            fileStore.writeAtomic(getFilePath(note.getId()), note.getContent());
+            long duration = System.currentTimeMillis() - start;
+            LOG.infof("Save Note SUCCESS duration_ms=%d", duration);
         } catch (IOException e) {
-            throw new RuntimeException("Could not write note to file: " + filePath, e);
+            LOG.error("Save Note ERROR", e);
+            throw new RuntimeException("Could not save note: " + note.getId().value(), e);
+        } finally {
+            MDC.remove(MDC_NOTE_ID);
         }
+    }
+
+    private Path getFilePath(NoteId id) {
+        return vaultPath.resolve(id.value() + MD_EXTENSION);
     }
 
     @Override
     public void delete(NoteId id) {
-        Path filePath = vaultPath.resolve(id.value() + ".md");
+        MDC.put(MDC_NOTE_ID, id.value());
         try {
+            Path filePath = getFilePath(id);
             Files.deleteIfExists(filePath);
+            LOG.info("Delete Note SUCCESS");
         } catch (IOException e) {
-            throw new RuntimeException("Could not delete note file: " + filePath, e);
+            LOG.error("Delete Note ERROR", e);
+            throw new RuntimeException("Could not delete note file: " + id.value(), e);
+        } finally {
+            MDC.remove(MDC_NOTE_ID);
         }
     }
 
@@ -99,7 +141,7 @@ public class LocalFileNoteRepository implements NoteRepository {
 
     @Override
     public void move(String sourceId, String targetId) {
-        Path possibleSourceFile = vaultPath.resolve(sourceId + ".md");
+        Path possibleSourceFile = vaultPath.resolve(sourceId + MD_EXTENSION);
         Path possibleSourceFolder = vaultPath.resolve(sourceId);
 
         Path actualSource;
@@ -107,7 +149,7 @@ public class LocalFileNoteRepository implements NoteRepository {
 
         if (Files.isRegularFile(possibleSourceFile)) {
             actualSource = possibleSourceFile;
-            actualTarget = vaultPath.resolve(targetId + ".md");
+            actualTarget = vaultPath.resolve(targetId + MD_EXTENSION);
         } else if (Files.isDirectory(possibleSourceFolder)) {
             actualSource = possibleSourceFolder;
             actualTarget = vaultPath.resolve(targetId);
